Fix Phone Scaling, Fix Notch Alignment, Add Animation to Phone

--- a/src/core/client/views/hud/html/phone/iphone-x.less
+++ b/src/core/client/views/hud/html/phone/iphone-x.less
@@ -1,5 +1,5 @@
-@max-phone-height: 65vh;
-@max-phone-width: 35vh;
+@max-phone-height: 55vh;
+@max-phone-width: 28vh;
 @max-screen-height: calc(@max-phone-height - 13vh);
 
 .iphone-x-active {
@@ -8,9 +8,10 @@
     max-width: @max-phone-width;
     min-height: @max-phone-height;
     max-height: @max-phone-height;
-    // animation: moveup 0.5s !important;
+    animation: moveup 0.2s !important;
     background: url('https://www.designbolts.com/wp-content/uploads/2018/05/Beautiful-Nature-Apple-iPhone-X-Wallpaper-1.jpg') !important;
     background-size: cover !important;
+    animation-timing-function: ease-in-out;
 }
 
 .iphone-x {
@@ -27,16 +28,20 @@
     user-select: none;
     transform: translateY(95vh);
     border-radius: 5px;
-    // animation: movedown 0.5s;
+    animation: movedown 0.2s;
+    animation-timing-function: ease-in-out;
 
     .notch {
         display: flex;
         justify-content: space-between;
+        align-items: center;
+        align-content: center;
+        justify-items: center;
         min-width: @max-phone-width;
         max-width: @max-phone-width;
         height: 5vh;
-        padding-left: 2vh;
-        padding-right: 2vh;
+        padding-left: 20px;
+        padding-right: 20px;
         font-weight: 800;
         background: rgba(0, 0, 0, 0.5);
 
@@ -137,7 +142,6 @@
                 position: relative;
                 font-family: monospace;
                 box-sizing: border-box;
-                pointer-events: none !important;
 
                 &:hover {
                     background-color: rgba(0, 0, 0, 0.75) !important;
@@ -161,11 +165,12 @@
                     text-shadow: 1px 1px 2px black;
                     color: rgba(255, 255, 255, 0.8);
                     letter-spacing: 0.1em;
+                    pointer-events: none !important;
                 }
 
                 i {
                     opacity: 0.75;
-                    pointer-events: none;
+                    pointer-events: none !important;
                 }
 
                 &:hover {
@@ -192,19 +197,19 @@
 
 @keyframes moveup {
     from {
-        transform: translateY(0px);
+        transform: translateY(95vh);
     }
     to {
-        transform: translateY(-780px);
+        transform: translateY(calc(100vh - @max-phone-height));
     }
 }
 
 @keyframes movedown {
     from {
-        transform: translateY(-780px);
+        transform: translateY(calc(100vh - @max-phone-height));
     }
     to {
-        transform: translateY(0px);
+        transform: translateY(95vh);
     }
 }
 
